[gd_scene load_steps=10 format=3 uid="uid://csm2pcef8abw0"]

[ext_resource type="Script" path="res://scenes/game_object/player/player.gd" id="1_jvv51"]
[ext_resource type="Texture2D" uid="uid://chco1ft5ekxie" path="res://scenes/game_object/player/player.png" id="1_lodsg"]
[ext_resource type="PackedScene" uid="uid://bl0op6fqnakfk" path="res://scenes/ability/sword_ability_controller/sword_ability_controller.tscn" id="2_6lrh7"]
[ext_resource type="PackedScene" uid="uid://cb82l3sahmpyx" path="res://scenes/component/health_component.tscn" id="2_i8i3m"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fducv"]
bg_color = Color(0.247059, 0.14902, 0.192157, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cgc0j"]
bg_color = Color(0.262745, 0.882353, 0.701961, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.247059, 0.14902, 0.192157, 1)

[sub_resource type="CircleShape2D" id="CircleShape2D_2wsrp"]
radius = 32.0

[sub_resource type="CircleShape2D" id="CircleShape2D_b85qj"]
radius = 7.0

[sub_resource type="CircleShape2D" id="CircleShape2D_hxhpl"]
radius = 5.0

[node name="Player" type="CharacterBody2D" groups=["player"]]
collision_layer = 0
motion_mode = 1
script = ExtResource("1_jvv51")

[node name="HealthComponent" parent="." instance=ExtResource("2_i8i3m")]

[node name="AbilityManager" type="Node" parent="."]

[node name="SwordAbilityController" parent="AbilityManager" instance=ExtResource("2_6lrh7")]

[node name="DamageIntervalTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="HealthBar" type="ProgressBar" parent="."]
custom_minimum_size = Vector2(32, 6)
offset_left = -16.0
offset_top = 3.0
offset_right = 16.0
offset_bottom = 9.0
pivot_offset = Vector2(16, 3)
theme_override_styles/background = SubResource("StyleBoxFlat_fducv")
theme_override_styles/fill = SubResource("StyleBoxFlat_cgc0j")
max_value = 1.0
value = 0.5
show_percentage = false

[node name="PickupArea2D" type="Area2D" parent="."]
visible = false
collision_layer = 16
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="PickupArea2D"]
position = Vector2(0, -6)
shape = SubResource("CircleShape2D_2wsrp")

[node name="ColllisionArea2D" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="ColllisionArea2D"]
position = Vector2(0, -7)
shape = SubResource("CircleShape2D_b85qj")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_lodsg")
offset = Vector2(0, -8)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, -5)
shape = SubResource("CircleShape2D_hxhpl")
